FullQa New/src/objects/Forecasting_Reporting_Object__c.object
<CustomObject>
    <fields>
        <fullName>Calc_Date_Snap__c</fullName>
        <label>Calc Estimation Date Old</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calc_Delay_Snap__c</fullName>
        <label>Calc Delay Old</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calc_Delay_To__c</fullName>
        <label>Calc Delay New</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calc_Estimation_Date_To__c</fullName>
        <label>Calc Estimation Date New</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calc_Estimation_Now__c</fullName>
        <formula>GoLive_Implementation__r.Calc_Estimation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calc Estimation Date Now</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Calc_Status_Now__c</fullName>
        <formula>TEXT(GoLive_Implementation__r.Calc_Status__c)</formula>
        <label>Calc Status Now</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calc_Status_Snap__c</fullName>
        <label>Calc Status Old</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calc_Status_To__c</fullName>
        <label>Calc Status New</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calc_Target_Date_Change__c</fullName>
        <formula>IF( Calc_Estimation_Date_To__c = Calc_Date_Snap__c , False,
IF( 
   (AND(
    ISNULL(Calc_Estimation_Date_To__c), 
    ISNULL(Calc_Date_Snap__c)
   )
   )


, False

, True))</formula>
        <label>Calc Target Date Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certs_Delay_Snap__c</fullName>
        <label>Certs Delay Old</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certs_Delay_To__c</fullName>
        <label>Certs Delay New</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certs_Estimation_Date_Now__c</fullName>
        <formula>GoLive_Implementation__r.Certs_Estimation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Certs Estimation Date Now</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certs_Estimation_Date_Snap__c</fullName>
        <label>Certs Estimation Date Old</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certs_Estimation_Date_To__c</fullName>
        <label>Certs Estimation Date New</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certs_Status_Now__c</fullName>
        <formula>TEXT(GoLive_Implementation__r.Certs_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Certs Status Now</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certs_Status_Snap__c</fullName>
        <label>Certs Status Old</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certs_Status_To__c</fullName>
        <label>Certs Status New</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Certs_Target_Date_Change__c</fullName>
        <formula>IF( Certs_Estimation_Date_Snap__c =  Certs_Estimation_Date_To__c , False,
IF( 
   (AND(
    ISNULL(Certs_Estimation_Date_Snap__c), 
    ISNULL(Certs_Estimation_Date_To__c)
   )
   )


, False

, True))</formula>
        <label>Certs Target Date Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Time__c</fullName>
        <label>Change Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GoLive_Implementation__c</fullName>
        <label>GoLive Implementation</label>
        <referenceTo>GoLive_Implementation__c</referenceTo>
        <relationshipLabel>Forecasting Reporting Objects</relationshipLabel>
        <relationshipName>Forecasting_Reporting_Objects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Has_Calc__c</fullName>
        <formula>GoLive_Implementation__r.Has_Calc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Calc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_Certs__c</fullName>
        <formula>GoLive_Implementation__r.Has_Certs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Certs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Has_Returns__c</fullName>
        <formula>GoLive_Implementation__r.Has_Returns__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Returns</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Live_Action__c</fullName>
        <formula>IF(

  (OR(
   (AND(
     Calc_Status_To__c = &quot;Live&quot;,
     Calc_Status_To__c &lt;&gt; Calc_Status_Snap__c 
     )),
   
  
   (AND(
     Certs_Status_Now__c = &quot;Live&quot;,
     Calc_Status_To__c &lt;&gt; Calc_Status_Snap__c 
     )) ,
   
  
   (AND(
    Returns_Status_To__c  = &quot;Live&quot;,
    Calc_Status_To__c &lt;&gt; Calc_Status_Snap__c 
       ))
   
    )),

True
, False)</formula>
        <label>Live Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Returns_Delay_Snaps__c</fullName>
        <label>Returns Delay Old</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Returns_Delay_To__c</fullName>
        <label>Returns Delay New</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Returns_Est_First_Filing_Date_To__c</fullName>
        <label>Returns Est First Filing Date New</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Returns_Estimation_First_Filing_Date_Now__c</fullName>
        <formula>GoLive_Implementation__r.Returns_Estimation__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Returns Est First Filing Date Now</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Returns_Estimation_First_Filing_Date__c</fullName>
        <label>Returns Est First Filing Date Old</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Returns_Status_Now__c</fullName>
        <formula>TEXT( GoLive_Implementation__r.Returns_Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Returns Status Now</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Returns_Status_Snap__c</fullName>
        <label>Returns Status Old</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Returns_Status_To__c</fullName>
        <label>Returns Status New</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Returns_Target_Date_Change__c</fullName>
        <formula>IF( Returns_Est_First_Filing_Date_To__c =  Returns_Estimation_First_Filing_Date__c , False,
IF( 
   (AND(
    ISNULL(Returns_Est_First_Filing_Date_To__c), 
    ISNULL(Returns_Estimation_First_Filing_Date__c)
   )
   )


, False

, True))</formula>
        <label>Returns Target Date Change</label>
        <type>Checkbox</type>
    </fields>
    <label>Forecasting Reporting Object</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Change_Time__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>NAME</columns>
        <columns>GoLive_Implementation__c</columns>
        <columns>Calc_Target_Date_Change__c</columns>
        <columns>Certs_Target_Date_Change__c</columns>
        <columns>Returns_Target_Date_Change__c</columns>
        <columns>Calc_Status_Snap__c</columns>
        <columns>Calc_Status_To__c</columns>
        <columns>Certs_Status_Snap__c</columns>
        <columns>Certs_Status_To__c</columns>
        <columns>Returns_Status_Snap__c</columns>
        <columns>Returns_Status_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:3</value>
        </filters>
        <label>All Recent Changes</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Forecasting Reporting Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecasting Reporting Objects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>